front app in progress: list of goals, create goal, edit goal, file upload, etc)
